src/test/deca/codegen/valid/OpsArithmetiques/testConvFloat.deca
// Description:
//    tests conversion int float
//
// Resultats:
//    3.00000e+00
// 
// Historique:
//    cree le 15/01/2021

{
    float x = 2.0;
    x = x + 1;
    print(x);
}
